<resources>
    <string name="app_name">第柒分享</string>
    <string-array name="planets_array">
        <item>分享</item>
        <item>授权</item>
        <item>登录</item>
    </string-array>
    <string name="drawer_open">打开状态</string>
    <string name="drawer_close">关闭状态</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <!-- Login -->
    <string name="text_share_hint">我要分享...</string>
    <string name="text_login_usernum">用户名</string>
    <string name="text_login_hint_usernum">邮箱/手机号</string>
    <string name="text_login_userpswd">密码</string>
    <string name="text_login_hint_userpswd">密码</string>
    <string name="text_login_rememberpswd">记住密码</string>
    <string name="text_login_login">登录</string>
    <string name="text_login_undo">取消</string>
    <string name="text_login_register">我没有账号,我注册</string>
    <!-- Register -->
    <string name="text_register_register">注册</string>
    <string name="text_register_pass_confirm">确定密码</string>
    <string name="text_email">电子邮箱</string>
    <string name="text_phone">电话</string>
    <string name="text_qq">QQ</string>
    <string name="text_register_login">我有账号,我登录</string>
    
    <string name="share_qqzone">QQ空间</string>
    <string name="share_tcweibo">腾讯微博</string>
    <string name="share_tvweichat">朋友圈</string>
    <string name="share_sina">新浪微博</string>
    <string name="not_yet_authorized">未授权</string>
</resources>
